fix article css overflow for mobile devices

--- a/src/assets/scss/pages/home-area/_article-block.scss
+++ b/src/assets/scss/pages/home-area/_article-block.scss
@@ -3,7 +3,7 @@
 
   .article-block {
     margin: 1em;
-    padding: 3em 3em;
+    padding: 3em;
     border-radius: 30px;
     background-color: rgba(245, 245, 247, 1);
     position: relative;
@@ -45,7 +45,7 @@
         max-width: 450px;
 
         @media (max-width: 1100px) {
-          margin: 2em;
+          margin:  1em 0;
         }
 
         svg {
@@ -62,7 +62,7 @@
         }
 
         img {
-          width: 100%;
+          max-width: 100%;
           height: auto;
           border-radius: 5px;
 
@@ -70,7 +70,6 @@
             & {
               width: calc(100vw - 6em);
               height: auto;
-              margin: 1em 0;
             }
           }
         }
